View Issue Details

IDProjectCategoryView StatusLast Update
0025898Open CASCADEOCCT:Modeling Algorithmspublic2015-10-16 16:47
ReporterpkvAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version6.9.0 
Target Version6.9.0Fixed in Version6.9.0 
Summary0025898: Wrong result obtained by intersection algorithm.
DescriptionWrong result obtained by intersection algorithm.
Steps To Reproduce# Use the following DRAW commands to reproduce the problem:
#
#----------------------------------001
restore x001_1 s1
restore x001_2 s2

intersect i s1 s2
#
# the result is:
An exception was caught 583319A8 : gp_VectorWithNullMagnitude:
** Exception ** 583319A8 : gp_VectorWithNullMagnitude:

TagsNo tags attached.
Test case numberbugs modalg_5(010) bug25898

Attached Files

  • x001_1 (68 bytes)
  • x001_2 (108 bytes)

Activities

pkv

2015-03-06 06:50

developer  

x001_1 (68 bytes)

pkv

2015-03-06 06:50

developer  

x001_2 (108 bytes)

git

2015-03-06 10:39

administrator   ~0038167

Branch CR25898 has been created by nbv.

SHA-1: 8439de7a5e7fe3b7cf0e874d3ea960396132384a


Detailed log of new commits:

Author: nbv
Date: Thu Mar 5 11:30:00 2015 +0300

    0025890: Exception is raised during intersection between faces
    
    The reason of the exception has been eliminated.

git

2015-03-06 10:40

administrator   ~0038168

Branch CR25898 has been updated forcibly by nbv.

SHA-1: 4a366fddac2187bff7f40fa82ec8546e1671ee6a

nbv

2015-03-06 10:42

developer   ~0038169

Dear Mikhail!

Please review CR25898 branch!

msv

2015-03-06 19:26

developer   ~0038208

Reviewed.

git

2015-03-06 20:09

administrator   ~0038209

Branch CR25898 has been updated forcibly by mkv.

SHA-1: 56102da920965d27c827c568bdb8d29b311e8b0d

mkv

2015-03-11 14:32

tester   ~0038261

Dear BugMaster,
Branch CR25898 was rebased on current master of occt git-repository.

mkv

2015-03-11 16:14

tester   ~0038270

Dear BugMaster,
Branch CR25898 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 56102da920965d27c827c568bdb8d29b311e8b0d

Number of compiler warnings:

occt component :
Linux: 18 (18 on master)
Windows: 0 (0 on master)

products component :
Linux: 11 (11 on master)
Windows: 4 (4 on master)

Regressions/Differences:
No regressions/differences

Testing cases:
http://occt-tests/CR25898-master-occt-64/Debian60-64/bugs/modalg_5/bug25898.html
http://occt-tests/CR25898-master-occt-64/Windows-64-VC10/bugs/modalg_5/bug25898.html
bugs modalg_5(010) bug25898: OK

Testing on Linux:
occt component :
Total MEMORY difference: 91744742 / 92088018
Total CPU difference: 57956.07000000001 / 58057.23999999997
products component :
Total MEMORY difference: 21231472 / 21268703
Total CPU difference: 9186.929999999977 / 35985.58

Testing on Windows:
occt component :
Total MEMORY difference: 57848243 / 57848620
Total CPU difference: 52060.375 / 29597.78125
products component :
Total MEMORY difference: 15058810 / 15064087
Total CPU difference: 16301.515625 / 9874.765625

There are following differences in images found by testdiff.
http://occt-tests/CR25898-master-products-64/Debian60-64/diff-Debian60-64.html

IMAGE parasolid geomfillpipe A6: A6.png differs
IMAGE parasolid geomfillpipe A5: A5.png differs
IMAGE parasolid geomfillpipe A4: A4.png differs
IMAGE parasolid geomfillpipe A1: A1.png differs
IMAGE parasolid geomfillpipe A3: A3.png differs
IMAGE parasolid geomfillpipe A2: A2.png differs
IMAGE parasolid geomfillpipe A8: A8.png differs
IMAGE parasolid geomfillpipe A7: A7.png differs
IMAGE parasolid geomfillpipe A9: A9.png differs
IMAGE parasolid read B5: B5.png differs
IMAGE parasolid read C6: C6.png differs
IMAGE parasolid read D4: D4.png differs
IMAGE parasolid read C1: C1.png differs
IMAGE parasolid read B8: B8.png differs
IMAGE parasolid read C2: C2.png differs
IMAGE parasolid read B6: B6.png differs
IMAGE parasolid read C5: C5.png differs
IMAGE parasolid read D3: D3.png differs
IMAGE parasolid read C4: C4.png differs
IMAGE parasolid read B9: B9.png differs
IMAGE parasolid read B7: B7.png differs
IMAGE parasolid read C3: C3.png differs
IMAGE parasolid read D5: D5.png differs
IMAGE parasolid read C9: C9.png differs
IMAGE emesh bugs bug24034_2: bug24034_2.png differs

git

2015-03-11 16:14

administrator   ~0038271

Branch CR25898 has been updated by mkv.

SHA-1: 8bea00ceec688f33838595ca43b0e1534c4b2166


Detailed log of new commits:

Author: mkv
Date: Wed Mar 11 16:13:04 2015 +0300

    Test case for issue CR25898

mkv

2015-03-11 16:15

tester   ~0038273

Dear nbv,
could you please review test case
bugs modalg_5(010) bug25898

git

2015-03-13 15:36

administrator   ~0038328

Branch CR25898 has been updated by nbv.

SHA-1: 866b881484dc833f103f3de24d3c5356d9f7d5a6


Detailed log of new commits:

Author: nbv
Date: Fri Mar 13 15:36:18 2015 +0300

    Comment to the script was added.

mkv

2015-03-13 18:47

tester   ~0038355

OK.
Dear BugMaster,
Branch CR25898 is TESTED.

git

2015-10-16 16:47

administrator   ~0047039

Branch CR25898 has been deleted by kgv.

SHA-1: 866b881484dc833f103f3de24d3c5356d9f7d5a6

Related Changesets

occt: master c4af16fb

2015-03-19 12:45:54

nbv


Committer: bugmaster Details Diff
0025898: Wrong result obtained by intersection algorithm.

The reason of the exception has been eliminated.

Test case for issue CR25898
Affected Issues
0025898
mod - src/IntWalk/IntWalk_PWalking.cxx Diff File
add - tests/bugs/modalg_5/bug25898 Diff File

Issue History

Date Modified Username Field Change
2015-03-06 06:50 pkv New Issue
2015-03-06 06:50 pkv Assigned To => msv
2015-03-06 06:50 pkv File Added: x001_1
2015-03-06 06:50 pkv File Added: x001_2
2015-03-06 06:51 pkv Status new => assigned
2015-03-06 10:25 msv Assigned To msv => nbv
2015-03-06 10:39 git Note Added: 0038167
2015-03-06 10:40 git Note Added: 0038168
2015-03-06 10:42 nbv Note Added: 0038169
2015-03-06 10:42 nbv Assigned To nbv => msv
2015-03-06 10:42 nbv Status assigned => resolved
2015-03-06 19:26 msv Note Added: 0038208
2015-03-06 19:26 msv Assigned To msv => bugmaster
2015-03-06 19:26 msv Status resolved => reviewed
2015-03-06 20:09 git Note Added: 0038209
2015-03-06 20:18 mkv Assigned To bugmaster => mkv
2015-03-11 14:32 mkv Note Added: 0038261
2015-03-11 16:14 mkv Note Added: 0038270
2015-03-11 16:14 git Note Added: 0038271
2015-03-11 16:15 mkv Note Added: 0038273
2015-03-11 16:15 mkv Assigned To mkv => bugmaster
2015-03-11 16:15 mkv Status reviewed => feedback
2015-03-11 16:15 mkv Test case number => bugs modalg_5(010) bug25898
2015-03-11 16:15 mkv Assigned To bugmaster => nbv
2015-03-11 16:51 nbv Status feedback => assigned
2015-03-13 15:36 git Note Added: 0038328
2015-03-13 15:45 nbv Assigned To nbv => mkv
2015-03-13 15:45 nbv Status assigned => feedback
2015-03-13 18:47 mkv Note Added: 0038355
2015-03-13 18:47 mkv Assigned To mkv => bugmaster
2015-03-13 18:47 mkv Status feedback => tested
2015-03-20 13:34 bugmaster Changeset attached => occt master c4af16fb
2015-03-20 13:34 bugmaster Status tested => verified
2015-03-20 13:34 bugmaster Resolution open => fixed
2015-05-14 15:28 aiv Status verified => closed
2015-05-14 15:31 aiv Fixed in Version => 6.9.0
2015-10-16 16:47 git Note Added: 0047039