0025898: Wrong result obtained by intersection algorithm.

The reason of the exception has been eliminated.

Test case for issue CR25898